--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,119 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,800&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
+.container { 
   min-height: 100vh;
+  text-align: center;
+  background: rgb(210, 196, 161);
+  background: linear-gradient(135deg, rgb(109, 117, 61),rgb(210, 196, 161),rgb(23, 77, 57));
+}
+
+h1 {
+  font-size: 3em;
+  margin: 0;
+  padding: 1em;
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4), 
+              0px 8px 13px rgb(198, 186, 149),
+              0px 18px 23px rgba(0,0,0,0.1);
+}
+
+.boardContainer { 
+  display: flex; 
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding: 0 15%;
+}
+
+.board {
+  position: relative;
+  width: 300px;
+  height: 700px;
+  background: #E5E5E5;
+  margin: 0 15px 30px 15px;
+  box-shadow: 10px 10px 14px -9px rgba(0,0,0,0.67);
+  user-select: none;
+}
+
+.label { 
+  color: #ffffff;
+  background: #ff0000;
+  margin: 0; 
+  padding: 15px 0;
+  height: 60px;
+} 
+
+.board:nth-child(1) .label { 
+  background: #87F892;
+}
+
+.board:nth-child(2) .label { 
+  background: #F66969;
+}
+
+.board:nth-child(3) .label {
+  background: #000000;
+}
+
+.board:nth-child(4) .label {
+  background: #a05656;
+}
+
+.board:nth-child(5) .label {
+  background: #0e3509;
+}
+
+.header {
   display: flex;
-  flex-direction: column;
+  height: 40px;
+  padding: 0 30px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header div {
+  padding: 5px;
+}
+
+.ticketCount {
+  color: #ffffff; 
+  background: #c4c4c4;
+} 
+
+.newTicket {
+  cursor: pointer; 
+} 
+
+.tickets {
+  position: relative;
+  height: 600px;
+  overflow: auto;
+} 
+
+.ticket {
+  position: relative;
+  margin: 10px;
+  min-height: 100px;
+  background: #fff;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.delete {
+  position: absolute;
+  top: 5px;
+  right: 20px; 
+  font-size: 1.25em;
 }
